# Babel

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  conanfile.txt  setup.txt
Client/Sources/: AudioTest.cpp  AudioTest2.cpp  Main.cpp  client_test.c  server_test.c
Client/Sources/Audio/: Audio.cpp  Audio.hpp  Encoding.hpp  IAudio.hpp  IEncoding.hpp  TestMain.cpp  TestMainClient.cpp  TestMainServer.cpp
Client/Sources/Graphic/: CMakeLists.txt  chat.cpp  chat.h  chat.hpp  cmake_install.cmake  contact.cpp  contact.hpp  conversation.cpp  conversation.hpp  customlayout.cpp  customlayout.hpp  customwidget.cpp  customwidget.hpp  friend.cpp  friend.hpp  friendlist.cpp  friendlist.h  friendlist.hpp  friendrequest.cpp  friendrequest.hpp  home.cpp  home.h  home.hpp  login.cpp  login.hpp  loginform.cpp  loginform.hpp  loginregister.cpp  loginregister.h  loginregister.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  managefriend.cpp  managefriend.hpp  message.cpp  message.h  message.hpp
Client/Sources/Network/: NetworkClient.cpp  NetworkClient.hpp  VoIpClient.cpp  VoIpClient.hpp  VoIpMainTest.cpp
Client/Sources/babelInterface/: CMakeLists.txt  chat.cpp  chat.h  contact.cpp  contact.h  conversation.cpp  conversation.h  customlayout.h  customwidget.cpp  customwidget.h  friendlist.cpp  friendlist.h  home.cpp  home.h  login.cpp  login.h  loginform.cpp  loginform.h  loginregister.cpp  mainwindow.cpp  managefriend.cpp  managefriend.h  message.cpp  message.h
Interface/: NetworkInterface.hpp
Server/Sources/: Controller.cpp  Controller.hpp  DatabaseMessageHandling.cpp  DatabaseMessageHandling.hpp  Db.hpp  Main.cpp  MainServer.cpp  MainServer.hpp  NetworkClient.cpp  NetworkClient.hpp  User.cpp  User.hpp  VoIpServer.cpp  VoIpServer.hpp
Server/Sources/Database/: DatabaseDiscussionHandling.cpp  DatabaseDiscussionHandling.hpp  DatabaseMessageHandling.cpp  DatabaseMessageHandling.hpp  DatabaseUserDiscussionHandling.cpp  DatabaseUserDiscussionHandling.hpp  DatabaseUserFriendHandling.cpp  DatabaseUserFriendHandling.hpp  DatabaseUserHandling.cpp  DatabaseUserHandling.hpp  Db.hpp
Server/Sources/Network/: CArray.cpp  CArray.hpp  MainServer.hpp  NetworkClient.cpp  NetworkClient.hpp  VoIp.cpp  VoIp.hpp  VoIpMain.cpp
doc/html/: Audio_8cpp.html  Audio_8hpp.html  Audio_8hpp_source.html  Client_2Sources_2Main_8cpp.html  Client_2Sources_2Network_2NetworkClient_8cpp.html  Client_2Sources_2Network_2NetworkClient_8hpp.html  Client_2Sources_2Network_2NetworkClient_8hpp_source.html  Controller_8cpp.html  Controller_8hpp.html  Controller_8hpp_source.html  DatabaseDiscussionHandling_8cpp.html  DatabaseDiscussionHandling_8hpp.html  DatabaseDiscussionHandling_8hpp_source.html  DatabaseMessageHandling_8cpp.html  DatabaseMessageHandling_8hpp.html  DatabaseMessageHandling_8hpp_source.html  DatabaseUserDiscussionHandling_8cpp.html  DatabaseUserDiscussionHandling_8hpp.html  DatabaseUserDiscussionHandling_8hpp_source.html  DatabaseUserFriendHandling_8cpp.html  DatabaseUserFriendHandling_8hpp.html  DatabaseUserFriendHandling_8hpp_source.html  DatabaseUserHandling_8cpp.html  DatabaseUserHandling_8hpp.html  DatabaseUserHandling_8hpp_source.html  Db_8hpp.html  Db_8hpp_source.html  Encoding_8hpp.html  Encoding_8hpp_source.html  IAudio_8hpp.html  IAudio_8hpp_source.html  IEncoding_8hpp.html  IEncoding_8hpp_source.html  MainServer_8hpp.html  MainServer_8hpp_source.html  NetworkInterface_8hpp.html  NetworkInterface_8hpp_source.html  Server_2Sources_2Main_8cpp.html  Server_2Sources_2Network_2NetworkClient_8cpp.html  Server_2Sources_2Network_2NetworkClient_8hpp.html  (+335 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+57 more)
doc/latex/: Audio_8cpp.tex  Audio_8hpp.tex  Client_2Sources_2Main_8cpp.tex  Client_2Sources_2Network_2NetworkClient_8cpp.tex  Client_2Sources_2Network_2NetworkClient_8hpp.tex  Controller_8cpp.tex  Controller_8hpp.tex  DatabaseDiscussionHandling_8cpp.tex  DatabaseDiscussionHandling_8hpp.tex  DatabaseMessageHandling_8cpp.tex  DatabaseMessageHandling_8hpp.tex  DatabaseUserDiscussionHandling_8cpp.tex  DatabaseUserDiscussionHandling_8hpp.tex  DatabaseUserFriendHandling_8cpp.tex  DatabaseUserFriendHandling_8hpp.tex  DatabaseUserHandling_8cpp.tex  DatabaseUserHandling_8hpp.tex  Db_8hpp.tex  Encoding_8hpp.tex  IAudio_8hpp.tex  IEncoding_8hpp.tex  MainServer_8hpp.tex  NetworkInterface_8hpp.tex  Server_2Sources_2Main_8cpp.tex  Server_2Sources_2Network_2NetworkClient_8cpp.tex  Server_2Sources_2Network_2NetworkClient_8hpp.tex  TestMainClient_8cpp.tex  TestMainServer_8cpp.tex  TestMain_8cpp.tex  User_8cpp.tex  User_8hpp.tex  VoIpClient_8cpp.tex  VoIpClient_8hpp.tex  VoIpMain_8cpp.tex  VoIpServer_8cpp.tex  VoIpServer_8hpp.tex  VoIp_8cpp.tex  VoIp_8hpp.tex  annotated.tex  build_2CMakeFiles_23_811_80_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  (+184 more)
lib/fonts/: fonts.scale
